@@ -1,3 +1,8 @@
+2013-03-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/macros.lisp: expand-tabs(): Really
+	expand all tabs.
+
 2013-03-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/s-parser.boot: Small Spad syntax change.
